--- a/ArcadeSpaceInvaders/ArcadeSpaceInvadersLibrary/ArcadeSpaceInvadersLibrary.csproj
+++ b/ArcadeSpaceInvaders/ArcadeSpaceInvadersLibrary/ArcadeSpaceInvadersLibrary.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="HeroShip.cs" />
     <Compile Include="IMovable.cs" />
     <Compile Include="IShootable.cs" />
     <Compile Include="IShooter.cs" />
