--- a/ArcadeSpaceInvaders/ArcadeSpaceInvadersLibrary/ArcadeSpaceInvadersLibrary.csproj
+++ b/ArcadeSpaceInvaders/ArcadeSpaceInvadersLibrary/ArcadeSpaceInvadersLibrary.csproj
@@ -41,12 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="EnemyShip.cs" />
     <Compile Include="HeroShip.cs" />
     <Compile Include="IMovable.cs" />
     <Compile Include="IShootable.cs" />
     <Compile Include="IShooter.cs" />
     <Compile Include="Projectile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Ship.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
